<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImcResultActivity"
    android:background="@color/bg_app">

    <LinearLayout
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_margin="16dp">
    </TextView>

    </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/viewResultado"
            android:layout_width="0dp"
            android:layout_height="500dp"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/txtResultado"
            app:layout_constraintStart_toStartOf="@id/txtResultado"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/bg_comp"
            android:layout_margin="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp"
                >

                <TextView
                    android:id="@+id/tvImcResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/psuperior"
                    android:textColor="@color/orange"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp">

                </TextView>

                <TextView
                    android:id="@+id/tvImc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="27.46"
                    android:textColor="@color/white"
                    android:textSize="70dp"
                    android:textStyle="bold"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="70dp">

                </TextView>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estás por encima de lo óptimo para tu peso y altura"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:gravity="center">
            </TextView>
        </LinearLayout>
        </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRecalcular"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/recalcular"
        android:layout_marginTop="16dp"
        app:backgroundTint="@color/bg_button"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/viewResultado"
        app:layout_constraintEnd_toEndOf="@id/viewResultado"
        app:layout_constraintTop_toBottomOf="@id/viewResultado">

    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>