<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImcCalculatorActivity"
    android:background="@color/bg_app">

    <!-- CARDVIEW MASCULINO -->
    <androidx.cardview.widget.CardView
        android:layout_marginTop="25dp"
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/bg_comp_sel"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewFemale">

        <LinearLayout
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:tint="@color/white"
                android:src="@drawable/img_male">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:gravity="center">
            </TextView>
           </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- CARDVIEW MASCULINO -->


    <!-- CARDVIEW FEMENINO -->
    <androidx.cardview.widget.CardView
        android:layout_marginTop="25dp"
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/bg_comp"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewMale">

        <LinearLayout
            android:background="@color/bg_comp_sel"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/img_female"
                app:tint="@color/white">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text">
            </TextView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- CARDVIEW FEMENINO -->


    <!-- CARDVIEW VIEW SLIDER -->
    <androidx.cardview.widget.CardView
        android:id="@+id/viewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/viewMale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/bg_comp"
        android:layout_margin="16dp">

        <LinearLayout
            android:background="@color/bg_comp_sel"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/altura"
                android:textColor="@color/title_text">

            </TextView>

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textSize="38sp"
                android:textColor="@color/white"
                android:textStyle="bold">
            </TextView>

            <com.google.android.material.slider.RangeSlider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rsHeight"
                android:contentDescription="Height"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="220"
                >

            </com.google.android.material.slider.RangeSlider>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- CARDVIEW VIEW SLIDER -->

    <!-- CARDVIEW PESO -->
    <androidx.cardview.widget.CardView
        android:layout_marginTop="25dp"
        android:id="@+id/viewPeso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/bg_comp_sel"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="@id/viewMale"
        app:layout_constraintTop_toBottomOf="@id/viewHeight"
        app:layout_constraintEnd_toEndOf="@id/viewMale">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/peso"
                android:textColor="@color/title_text"
                android:textAllCaps="true">

            </TextView>

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="38sp"
                android:textColor="@color/white"
                android:textStyle="bold">
            </TextView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/bg_fab"
                    app:tint="@color/white"
                    android:src="@drawable/ic_remove"
                    android:layout_marginEnd="16dp"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAdditionWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/bg_fab"
                    app:tint="@color/white"
                    android:src="@drawable/ic_add"
                    />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <!-- CARDVIEW PESO -->

    <!-- CARDVIEW EDAD -->
    <androidx.cardview.widget.CardView
        android:layout_marginTop="25dp"
        android:id="@+id/viewEdad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/bg_comp_sel"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="@id/viewFemale"
        app:layout_constraintTop_toBottomOf="@id/viewHeight"
        app:layout_constraintEnd_toEndOf="@id/viewFemale">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/edad"
                android:textColor="@color/title_text">

            </TextView>

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13"
                android:textSize="38sp"
                android:textColor="@color/white"
                android:textStyle="bold">
            </TextView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/bg_fab"
                    app:tint="@color/white"
                    android:src="@drawable/ic_remove"
                    android:layout_marginEnd="16dp"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAdditionAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/bg_fab"
                    app:tint="@color/white"
                    android:src="@drawable/ic_add"
                    />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- CARDVIEW EDAD -->

    <!-- AppCompatButton para el botón de CALCULAR -->
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/calcular"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="32sp"
        android:background="@color/bg_button"
        android:id="@+id/btnCalc"
        app:layout_constraintStart_toStartOf="@id/viewPeso"
        app:layout_constraintEnd_toEndOf="@id/viewEdad"
        app:layout_constraintTop_toBottomOf="@id/viewEdad"
        android:layout_margin="16dp"
        />
    <!-- AppCompatButton para el botón de CALCULAR -->


</androidx.constraintlayout.widget.ConstraintLayout>